# Stock_app

./: .gitignore  ARCHITECTURE.md  PROJECT_HISTORY.html  QUICKSTART.md  README.md  api_client.py  fetch_data.py  init_db.py  main.py  portfolio.py  pyproject.toml  query_schema.py  report.py  requirements.txt  step1_fetcher.py  step2_etl_and_db.py  step3_fundamentals.py  stock_warehouse.db  task_status.db  test_verify.py
backtesting/: __init__.py  engine.py
core/: __init__.py  analysis.py  data.py  database.py  filters.py  fundamentals.py  schema.py  themes.py
ui/: __init__.py  app.py
